@@ -1,4 +1,4 @@
-#Sun Aug 31 23:30:19 EST 2008
+#Sun Sep 14 17:18:45 EST 2008
 major_version=1.6b
-minor_version=88
+minor_version=90
 app_name=eLife
