@@ -1,3 +1,9 @@
+== 14/Sep/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b89.zip V1.6-b89]
+
+''' Jetty '''
+
+Hack to get rid of firefox's 3.0's broken favicon.ico handling. 
+
 == 13/Sep/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b88.zip V1.6-b88]   [attachment:wiki:SoftwareReleases:eLife-1.6b88-libs.zip Libs-V1.6b88] ==
 
 '''Serial '''
